@@ -18,6 +18,8 @@
           <item key="connection.provider">NHibernate.Connection.DriverConnectionProvider</item>
           <item key="connection.driver_class">NHibernate.Driver.SqlClientDriver</item>
           <item key="dialect">NHibernate.Dialect.MsSql2008Dialect</item>
+          <!--from 3.x will enabled by default-->
+          <item key="use_proxy_validator">false</item>
           <item key="proxyfactory.factory_class">NHibernate.ByteCode.Castle.ProxyFactoryFactory,CodeSharp.Core.Castles</item>
           <item key="cache.provider_class">NHibernate.Caches.SysCache.SysCacheProvider,CodeSharp.Core.Castles</item>
         </settings>
